# tsw-0.4

./: .gitmodules  README.md
src/: .cproject  .descr.md  .gitignore  .lock-waf_linux2_build  .lock-waf_win32_build  cpp_doxygen.conf
src/base_is/: .gitignore
src/base_is/framework/cpp/: .gitignore  CMakeLists.txt
src/base_is/framework/cpp/impl/: action.cpp  action_controller.cpp  base64.cpp  binary_message.h  bson_deserializer.cpp  bson_impl.cpp  bson_impl.h  bson_serializer.cpp  cmd_line_parser.cpp  controller_impl.h  debug_tools.cpp  deserializer.cpp  error.cpp  event.cpp  event_controller.cpp  field.cpp  functional_helper.h  json_deserializer.cpp  json_impl.cpp  json_impl.h  json_serializer.cpp  localization.cpp  magistral.cpp  message.cpp  metadata.cpp  module.cpp  module_controller.cpp  serializer.cpp  settings.cpp  settings.cpp.autosave  system.cpp  types.cpp  uid_generator.cpp  zmq_magistral_impl.cpp  zmq_magistral_impl.h
src/base_is/framework/cpp/impl/mac_address_utility/: mac_address_utility.cpp  mac_address_utility.h
src/base_is/framework/cpp/include/tsw/: action.h  action_controller.h  base64.h  bson_deserializer.h  bson_serializer.h  cmd_line_parser.h  debug_tools.h  deserializer.h  error.h  event.h  event_controller.h  field.h  impexp.h  json_deserializer.h  json_serializer.h  localization.h  logger.h  magistral.h  message.h  metadata.h  module.h  module_controller.h  serializer.h  settings.h  system.h  type_traits.h  types.h  uid_generator.h
src/base_is/framework/cpp/tests/: CMakeLists.txt  base64_test.cpp  bson_deserializer_test.cpp  bson_impl_test.cpp  bson_serializer_test.cpp  json_deserializer_test.cpp  json_impl_test.cpp  json_serializer_test.cpp  logger_test.cpp  magistral_test.cpp  tester.cpp  tests_common.h  value_test.cpp
src/base_is/framework/cpp/trash/impl/: types.cpp  value.cpp  value_impl.cpp  value_impl.h
src/base_is/framework/cpp/trash/include/tsw/: error.h  types.h
